[package]
name = "get-img"
version = "0.4.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.5.0"
log = "0.4.22"
regex = "1.11.1"
reqwest = "0.12.11"
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
serenity = { version = "0.12.4", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "utils"] }
simple_logger = "5.0.0"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread"] }
toml = "0.8.16"

[profile.release]
# lto = true
# strip = true